--- a/episode4_git/Episode_4_Git_paper.Rmd
+++ b/episode4_git/Episode_4_Git_paper.Rmd
@@ -31,5 +31,5 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 
 # Practice With the Git Tutorial 
 ## To see how stage and commit works
-
+Hi I have made a change here
 
