--- a/episode4_git/Episode_4_Git_paper.Rmd
+++ b/episode4_git/Episode_4_Git_paper.Rmd
@@ -33,3 +33,6 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 ## To see how stage and commit works
 Hi I have made a change here
 
+#Add methods
+Detailed methods should be entered here
+
